Updated latest SE binaries 01.050.007. Updated version number prior to release. Fixed due to changes in asteroid API. WIP on Asteroid merge.

--- a/Main/SEToolbox/SEToolbox/App.xaml
+++ b/Main/SEToolbox/SEToolbox/App.xaml
@@ -141,6 +141,12 @@
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
 
+        <ObjectDataProvider x:Key="VoxelMergeTypeEnum" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="support:VoxelMergeType" />
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+
         <Style x:Key="{x:Type Image}" TargetType="Image">
             <Style.Triggers>
                 <Trigger Property="Image.IsEnabled" Value="False">
