--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -41,7 +41,17 @@
                             <MenuItem.Icon>
                                 <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=speedometer}" />
                             </MenuItem.Icon>
-                            <MenuItem Header="Reset Speed" Command="{Binding ResetVelocityCommand}" ToolTip="Set Linear and Rotation Velocity to zero (0).">
+                            <MenuItem Header="Reset Linear Velocity" Command="{Binding ResetLinearVelocityCommand}" ToolTip="Set Linear Velocity to zero (0).">
+                                <MenuItem.Icon>
+                                    <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=media_stop}" />
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem Header="Reset Rotation Velocity" Command="{Binding ResetRotationVelocityCommand}" ToolTip="Set Rotation Velocity to zero (0).">
+                                <MenuItem.Icon>
+                                    <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=media_stop}" />
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem Header="Reset all Speed" Command="{Binding ResetVelocityCommand}" ToolTip="Set Linear and Rotation Velocity to zero (0).">
                                 <MenuItem.Icon>
                                     <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=media_stop}" />
                                 </MenuItem.Icon>
@@ -115,8 +125,8 @@
                                 <MenuItem Header="Rotate cubes forward-down around X axis (-90 Pitch)" Command="{Binding RotateCubesPitchNegativeCommand}"/>
                                 <MenuItem Header="Rotate cubes anti-clockwise around Y axis (+90 Yaw)" Command="{Binding RotateCubesYawPositiveCommand}"/>
                                 <MenuItem Header="Rotate cubes clockwise around Y axis (-90 Yaw)" Command="{Binding RotateCubesYawNegativeCommand}"/>
-                                <MenuItem Header="Rotate cubes right-down around Z axis (+90 Roll)" Command="{Binding RotateCubesRollPositiveCommand}"/>
-                                <MenuItem Header="Rotate cubes left-down around Z axis (-90 Roll)" Command="{Binding RotateCubesRollNegativeCommand}"/>
+                                <MenuItem Header="Rotate cubes left-down around Z axis (+90 Roll)" Command="{Binding RotateCubesRollPositiveCommand}"/>
+                                <MenuItem Header="Rotate cubes right-down around Z axis (-90 Roll)" Command="{Binding RotateCubesRollNegativeCommand}"/>
                             </MenuItem>
                             <!--<MenuItem Header="Ladder to Passage" Command="{Binding ConvertLadderToPassageCommand}"/>-->
                         </MenuItem>
@@ -189,7 +199,17 @@
                             </i:Interaction.Behaviors>
                             <Button.ContextMenu>
                                 <ContextMenu HorizontalAlignment="Right">
-                                    <MenuItem Header="Reset Speed" Command="{Binding ResetVelocityCommand}" ToolTip="Set Linear and Rotation Velocity to zero (0).">
+                                    <MenuItem Header="Reset Linear Velocity" Command="{Binding ResetLinearVelocityCommand}" ToolTip="Set Linear Velocity to zero (0).">
+                                        <MenuItem.Icon>
+                                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=media_stop}" />
+                                        </MenuItem.Icon>
+                                    </MenuItem>
+                                    <MenuItem Header="Reset Rotation Velocity" Command="{Binding ResetRotationVelocityCommand}" ToolTip="Set Rotation Velocity to zero (0).">
+                                        <MenuItem.Icon>
+                                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=media_stop}" />
+                                        </MenuItem.Icon>
+                                    </MenuItem>
+                                    <MenuItem Header="Reset all Speed" Command="{Binding ResetVelocityCommand}" ToolTip="Set Linear and Rotation Velocity to zero (0).">
                                         <MenuItem.Icon>
                                             <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=media_stop}" />
                                         </MenuItem.Icon>
@@ -207,8 +227,14 @@
                                 </ContextMenu>
                             </Button.ContextMenu>
                         </Button>
-                        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Text="{Binding LinearVelocity, StringFormat='{}{0:#,###0.000} m/s'}" />
-
+                        <Grid Grid.Row="5" Grid.Column="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="{Binding LinearVelocity, StringFormat='{}{0:#,###0.000} m/s'}" ToolTip="Linear Velocity" />
+                            <TextBlock Grid.Column="1" VerticalAlignment="Center" Text="{Binding AngularVelocity, StringFormat='{}{0:#,###0.000} m/s'}" ToolTip="Approximate Angular Velocity" Margin="8,0,0,0" />
+                        </Grid>
                         <Separator Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"/>
                         <TextBlock Grid.Row="7" Grid.Column="0" Margin="4 0 4 0" Text="Piloted:"/>
                         <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPiloted}" />
@@ -363,13 +389,13 @@
                                                 </DataTemplate>
                                             </GridViewColumn.CellTemplate>
                                         </controls:SortableGridViewColumn>
-                                        <GridViewColumn Header="Name" Width="175">
+                                        <controls:SortableGridViewColumn Header="Name" Width="175" SortBinding="{Binding FriendlyName}">
                                             <GridViewColumn.CellTemplate>
                                                 <DataTemplate>
                                                     <TextBlock Text="{Binding FriendlyName, Converter={StaticResource EnumToResouceConverter}}" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis"/>
                                                 </DataTemplate>
                                             </GridViewColumn.CellTemplate>
-                                        </GridViewColumn>
+                                        </controls:SortableGridViewColumn>
                                         <GridViewColumn Header="Owner" Width="80">
                                             <GridViewColumn.CellTemplate>
                                                 <DataTemplate>
