--- a/Main/SEToolbox/SEToolbox/Views/WindowGenerateVoxelField.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowGenerateVoxelField.xaml
@@ -7,7 +7,7 @@
         ResizeMode="CanResize"  ShowInTaskbar="False" WindowStartupLocation="CenterOwner" WindowStyle="ThreeDBorderWindow" 
         Title="Generate Asteroid Field" Height="380" Width="600" Icon="/SEToolbox;component/app.ico" Style="{StaticResource DefaultWindowStyle}"
         MinHeight="150" MinWidth="250"
-        commands:DialogCloser.DialogResult="{Binding CloseResult}">
+        commands:DialogCloser.DialogResult="{Binding CloseResult}" FocusManager.FocusedElement="{Binding ElementName=UxStartBox}">
     <Window.Resources>
         <converters:BusyMouseConverter x:Key="BusyMouseConverter" />
     </Window.Resources>
@@ -15,18 +15,53 @@
         <Binding Path="IsBusy" Converter="{StaticResource BusyMouseConverter}"/>
     </Window.Cursor>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="8">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="8">
-                <Label Content="Range from:"/>
-                <TextBox Width="80" Style="{StaticResource textBoxInError}">
+            <Grid Grid.Row="0" Margin="0 0 0 8">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Label Content="Center:" Grid.Column="0"/>
+                <Grid Grid.Column="1" Width="80">
+                    <TextBox ToolTip="X" x:Name="UxStartBox">
+                        <TextBox.Text>
+                            <Binding Path="CenterPositionX" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
+                        </TextBox.Text>
+                    </TextBox>
+                    <TextBlock Text="X" Background="Transparent" Foreground="LightSteelBlue" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="4,0" IsHitTestVisible="False" />
+                </Grid>
+                <Grid Grid.Column="2" Width="80">
+                    <TextBox ToolTip="Y">
+                        <TextBox.Text>
+                            <Binding Path="CenterPositionY" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
+                        </TextBox.Text>
+                    </TextBox>
+                    <TextBlock Text="Y" Background="Transparent" Foreground="LightSteelBlue" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="4,0" IsHitTestVisible="False" />
+                </Grid>
+                <Grid Grid.Column="3" Width="80">
+                    <TextBox ToolTip="Z">
+                        <TextBox.Text>
+                            <Binding Path="CenterPositionZ" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
+                        </TextBox.Text>
+                    </TextBox>
+                    <TextBlock Text="Z" Background="Transparent" Foreground="LightSteelBlue" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="4,0" IsHitTestVisible="False" />
+                </Grid>
+
+                <Label Content="Range from:" Grid.Column="5"/>
+                <TextBox Width="80" Style="{StaticResource textBoxInError}" Grid.Column="6">
                     <TextBox.Text>
                         <Binding Path="MinimumRange" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" >
                             <Binding.ValidationRules>
@@ -35,8 +70,8 @@
                         </Binding>
                     </TextBox.Text>
                 </TextBox>
-                <Label Content="to:"/>
-                <TextBox Width="80" Style="{StaticResource textBoxInError}">
+                <Label Content="to:" Grid.Column="7"/>
+                <TextBox Width="80" Style="{StaticResource textBoxInError}" Grid.Column="8">
                     <TextBox.Text>
                         <Binding Path="MaximumRange" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" >
                             <Binding.ValidationRules>
@@ -45,14 +80,14 @@
                         </Binding>
                     </TextBox.Text>
                 </TextBox>
-            </StackPanel>
-            <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="8" HorizontalAlignment="Right">
-                <Button Content="_Clear" Margin="8,0,0,0" Width="50" Command="{Binding ClearRowsCommand}"/>
+            </Grid>
+            <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="0 8" HorizontalAlignment="Left">
+                <Button Content="_Clear" Margin="0,0,0,0" Width="50" Command="{Binding ClearRowsCommand}"/>
                 <Button Content="Add _Random" Margin="8,0,0,0" Width="80" Command="{Binding AddRandomRowCommand}"/>
                 <Button Content="_Add" Margin="8,0,0,0" Width="50" Command="{Binding AddRowCommand}"/>
                 <Button Content="_Delete" Margin="8,0,0,0" Width="50" Command="{Binding DeleteRowCommand}"/>
             </StackPanel>
-            <controls:MyDataGrid Grid.Row="1" AutoGenerateColumns="False" ItemsSource="{Binding VoxelCollection, UpdateSourceTrigger=PropertyChanged}" CanUserDeleteRows="False" CanUserAddRows="False" SelectedItem="{Binding SelectedRow}" CanUserSortColumns="False">
+            <controls:MyDataGrid Grid.Row="2" AutoGenerateColumns="False" ItemsSource="{Binding VoxelCollection, UpdateSourceTrigger=PropertyChanged}" CanUserDeleteRows="False" CanUserAddRows="False" SelectedItem="{Binding SelectedRow}" CanUserSortColumns="False">
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding Index}" IsReadOnly="True" />
                     
@@ -236,10 +271,10 @@
 
                 </DataGrid.Columns>
             </controls:MyDataGrid>
+            <StackPanel Grid.Row="3" Orientation="Horizontal" Height="28" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 8 0 0">
+                <Button Width="90" Command="{Binding CreateCommand}" Content="Create" IsDefault="True"/>
+                <Button Margin="8,0,0,0" Width="90" Command="{Binding CancelCommand}" Content="Cancel" IsCancel="True"/>
+            </StackPanel>
         </Grid>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" Height="28" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,8,8">
-            <Button Width="90" Command="{Binding CreateCommand}" Content="Create" IsDefault="True"/>
-            <Button Margin="8,0,0,0" Width="90" Command="{Binding CancelCommand}" Content="Cancel" IsCancel="True"/>
-        </StackPanel>
     </Grid>
 </Window>
