--- a/Main/SEToolbox/SEToolbox/Views/ControlMeteor.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlMeteor.xaml
@@ -27,6 +27,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Label Grid.ColumnSpan="2">Meteor</Label>
@@ -94,5 +95,7 @@
         <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Volume, StringFormat='{}{0:#,###0.000} L'}" />
         <TextBlock Grid.Row="8" Grid.Column="0" Margin="4 0 4 0" Text="Mass:"/>
         <TextBlock Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Mass, StringFormat='{}{0:#,###0.00} Kg'}" />
+        <TextBlock Grid.Row="9" Grid.Column="0" Margin="4 0 4 0" Text="Integrity:"/>
+        <TextBlock Grid.Row="9" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Integrity, StringFormat='{}{0:#,###0.00}'}" />
     </Grid>
 </UserControl>
