--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -167,6 +167,7 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <Label Grid.Row="1" Grid.Column="0" Content="Name:"/>
@@ -260,12 +261,22 @@
                                 </MultiBinding>
                             </TextBlock.Text>
                         </TextBlock>
-                        <TextBlock Grid.Row="11" Grid.Column="0" Margin="4 0 4 0" Text="Mass:"/>
-                        <TextBlock Grid.Row="11" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Mass, StringFormat='{}{0:#,###0.00} Kg'}" />
-                        <TextBlock Grid.Row="12" Grid.Column="0" Margin="4 0 4 0" Text="Blocks:"/>
-                        <TextBlock Grid.Row="12" Grid.Column="1" VerticalAlignment="Center" Text="{Binding BlockCount, StringFormat='{}{0:#,###0}'}" />
-                        <TextBlock Grid.Row="13" Grid.Column="0" Margin="4 0 4 0" Text="Cockpit Orientation:"/>
-                        <TextBlock Grid.Row="13" Grid.Column="1" VerticalAlignment="Center" Text="{Binding CockpitOrientation}" />
+                        <TextBlock Grid.Row="11" Grid.Column="0" Margin="4 0 4 0" Text="Center:"/>
+                        <TextBlock Grid.Row="11" Grid.Column="1" VerticalAlignment="Center">
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{}{0:#,##0.0000}, {1:#,##0.0000}, {2:#,##0.0000}">
+                                    <Binding Path="Center.X" />
+                                    <Binding Path="Center.Y" />
+                                    <Binding Path="Center.Z" />
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
+                        <TextBlock Grid.Row="12" Grid.Column="0" Margin="4 0 4 0" Text="Mass:"/>
+                        <TextBlock Grid.Row="12" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Mass, StringFormat='{}{0:#,###0.00} Kg'}" />
+                        <TextBlock Grid.Row="13" Grid.Column="0" Margin="4 0 4 0" Text="Blocks:"/>
+                        <TextBlock Grid.Row="13" Grid.Column="1" VerticalAlignment="Center" Text="{Binding BlockCount, StringFormat='{}{0:#,###0}'}" />
+                        <TextBlock Grid.Row="14" Grid.Column="0" Margin="4 0 4 0" Text="Cockpit Orientation:"/>
+                        <TextBlock Grid.Row="14" Grid.Column="1" VerticalAlignment="Center" Text="{Binding CockpitOrientation}" />
                     </Grid>
                 </DockPanel>
             </TabItem>
